# CPS

./: .gitignore  CPS.sln  CPS_CPP.sln
CPS/: Average.h  AverageMod.h  CMakeLists.txt  CPS.vcxproj  CPS.vcxproj.filters  Complex.h  Containers.h  Convolution.h  Correlation.h  DCTII.h  DFT.h  Divide.h  FDCTII.h  FFT_DFT.h  FFT_DIF.h  FFT_DIT.h  Filter.h  FromFile.h  Generator.h  Histogram.h  IDCTII.h  IDFT.h  INumber.h  InputParser.h  MD.h  MSE.h  Multiply.h  Number.h  Operation.h  OperationOwner.h  PSNR.h  Power.h  QuantizeCut.h  QuantizeTreshold.h  RMS.h  RandNormal.h  RandUniform.h  Real.h  ReconstructFirstOrder.h  ReconstructSinc.h  (+15 more)
CPS/Base/: CMakeLists.txt  IOutput.h  Serializable.h
CPS/Generators/: FromFile.h  Generator.h  Impulse.h  ImpulseNoise.h  Linear.h  Power.h  RandNormal.h  RandUniform.h  Sampler.h  Sinus.h  SinusFlat.h  SinusPositive.h  Square.h  Step.h  Triangle.h
CPS/Numeric/: Real.h
CPS/Operations/: Average.h  AverageMod.h  Divide.h  Histogram.h  Multiply.h  Operation.h  OperationOwner.h  RMS.h  Subtract.h  Sum.h  Variance.h
CPS2.0/CPS_Electron/: binding.gyp  main.js  package-lock.json  package.json
CPS2.0/CPS_Electron/src/: main.ts
CPS_CPP/: BasicGenerator.h  CPS_CPP.vcxproj  CPS_CPP.vcxproj.filters  Complex.h  Divide.h  Generator.h  Input.h  Linear.h  Multiply.h  Operation.h  Output.h  Rand_NormalDistribution.h  Rand_UniformDistribution.h  Sampler.h  Sinus.h  SinusDoubleFlat.h  SinusFlat.h  Source.cpp  Square.h  Step.h  Subtract.h  Sum.h  Triangle.h  data_2018-03-17_2018-03-17.json
QuickDisplay/: data.json  index.html  index.js
(+31 files in other folders)
